--- a/index.html
+++ b/index.html
@@ -24,9 +24,37 @@
             </div>
             <div class="placeholder">this is a placeholder for an image</div>
         </div>
-        
     </div>
 
+    <div class="information">
+        <div class="info-title">Some random information.</div>
+        <div class="info-main">
+            <div class="sub">
+                <div class="box"></div>
+                <div class="info-text">this is some subtext under an illustration of image</div>
+            </div>
+            <div class="sub">
+                <div class="box"> </div>
+                <div class="info-text">this is some subtext under an illustration of image</div>
+            </div>
+            <div class="sub">
+                <div class="box"> </div>
+                <div class="info-text">this is some subtext under an illustration of image</div>
+            </div>
+            <div class="sub">
+                <div class="box"> </div>
+                <div class="info-text">this is some subtext under an illustration of image</div>
+            </div>
+        </div>       
+    </div>
+
+    <div class="quote">
+        <div class="quote-text"><em>This is an inspiring quote, or a testimonial from a customer.
+            Maybe it's just filling up space, or maybe people will actually read it. Who knows?
+            All I know is that it looks nice.</em> 
+        </div>
+        <div class="quoter">-Thor, God od Thunder</div>
+    </div>
 
 
     <div class="footer">
