main page is done all parts will be styled and final touches will be done.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
         <div class="quoter">-Thor, God od Thunder</div>
     </div>
 
+    <div class="bottom-part">
+        <div class="bottom-text-part">
+            <div class="bottom-title">Call to action! It's time!</div>
+            <div class="bottom-adv">Sign up for our product by clicking that button 
+                right over there!</div>
+        </div>
+        <div class="bottom-button">Sign up</div>
+    </div>
+
+
 
     <div class="footer">
         Copyright The Odin Project 2021
