landing page project is done. further detailed stylings can be done in the future

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
     <div class="footer">
-        Copyright The Odin Project 2021
+        Copyright © The Odin Project 2021
     </div>
 
 </body>
